crates/kply-cli/tests/snapshots/cli__session_cleanup_dry_run_missing_kubeconfig.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1409
expression: normalize_output(&stderr)
---
kply error: missing_kubeconfig

kubeconfig could not be read at the configured path; set KUBECONFIG or create ~/.kube/config
