crates/kply-cli/tests/snapshots/cli__session_cleanup_dry_run_missing_kubeconfig_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1446
expression: value
---
{
  "error": {
    "code": "missing_kubeconfig",
    "exit_code": 2,
    "message": "kubeconfig could not be read at the configured path; set KUBECONFIG or create ~/.kube/config"
  }
}
