crates/kply-cli/tests/snapshots/cli__session_cleanup_invalid_id.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1323
expression: normalize_output(&stderr)
---
kply error: session cleanup

session id must start and end with a lowercase ASCII letter or digit
