crates/kply-cli/tests/snapshots/cli__session_cleanup_invalid_id_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1338
expression: value
---
{
  "error": {
    "code": "session_cleanup",
    "exit_code": 2,
    "message": "session id must start and end with a lowercase ASCII letter or digit"
  }
}
