crates/kply-cli/tests/snapshots/cli__session_cleanup_namespace_without_apply.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1449
expression: normalize_output(&stderr)
---
kply error: session cleanup

--namespace requires --apply
