crates/kply-cli/tests/snapshots/cli__session_cleanup_namespace_without_apply_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1474
expression: value
---
{
  "error": {
    "code": "session_cleanup",
    "exit_code": 2,
    "message": "--namespace requires --apply"
  }
}
