crates/kply-cli/tests/snapshots/cli__session_cleanup_text.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1294
expression: output
---
kply session cleanup checkout-plan
status: planned
mutation: not_applied
cleanup: not_implemented
