crates/kply-cli/tests/snapshots/cli__session_create_apply_not_implemented.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: session create

session create --apply is not implemented yet
