crates/kply-cli/tests/snapshots/cli__session_create_apply_not_implemented_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "session_create",
    "exit_code": 1,
    "message": "session create --apply is not implemented yet"
  }
}
